# internal/models/activity_log.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"time"
+)
+
+type ActivityLog struct {
+	ID        uint      `json:"id" gorm:"primaryKey"`
+	UserID    uint      `json:"user_id"`
+	Action    string    `json:"action"`
+	Timestamp time.Time `json:"timestamp"`
+}
